sys/v4l2/gstv4l2src.c
@@ -447,6 +447,14 @@ gst_v4l2src_fixate (GstBaseSrc * basesrc, GstCaps * caps, GstStructure * pref_s)
     fcaps = gst_caps_copy_nth (caps, i);
 
     if (GST_V4L2_IS_ACTIVE (obj)) {
+      /* try hard to avoid TRY_FMT since some UVC camera just crash when this
+       * is called at run-time. */
+      if (gst_v4l2_object_caps_is_subset (obj, fcaps)) {
+        gst_caps_unref (fcaps);
+        fcaps = gst_v4l2_object_get_current_caps (obj);
+        break;
+      }
+
       /* Just check if the format is acceptable, once we know
        * no buffers should be outstanding we try S_FMT.
        *
